--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-    font-size: 5em;
+    font-size: 21px;
     font-weight: bold;
     text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
     animation: fadeIn 2s ease-in-out;
