--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #2c3e50;
+    background-color: #fff;
     font-family: 'Arial', sans-serif;
     color: #ecf0f1;
     overflow: hidden;
